Item14151: typo in Config.spec
- fixed javascript initializer
- better usability navigating images in gallery

--- a/pub/System/JQPhotoSwipeContrib/default-skin.css
+++ b/pub/System/JQPhotoSwipeContrib/default-skin.css
@@ -39,8 +39,10 @@
   .pswp__button:hover {
     opacity: 1; }
   .pswp__button:active {
+    background:inherit;
     outline: none;
-    opacity: 0.9; }
+    opacity: 0.9; 
+}
   .pswp__button::-moz-focus-inner {
     padding: 0;
     border: 0; }
@@ -104,10 +106,9 @@
 .pswp__button--arrow--left,
 .pswp__button--arrow--right {
   background: none;
-  top: 50%;
-  margin-top: -50px;
-  width: 70px;
-  height: 100px;
+  top: 50px;
+  width: 20%;
+  height: 100%;
   position: absolute; }
 
 .pswp__button--arrow--left {
@@ -119,8 +120,9 @@
 .pswp__button--arrow--left:before,
 .pswp__button--arrow--right:before {
   content: '';
-  top: 35px;
+  top: 50%;
   background-color: rgba(0, 0, 0, 0.3);
+  margin-top:-15px;
   height: 30px;
   width: 32px;
   position: absolute; }
